# quantum-adapter-cq

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
me.icefla.quantum/: CMakeLists.txt  app.cpp  app.h  cqapi.h  cqdefines.h  dllmain.cpp  me.icefla.quantum.cpp  me.icefla.quantum.h  me.icefla.quantum.json
src/: CMakeLists.txt  app.cpp  app.h  cqupdate.cpp  cqupdate.h  dllmain.cpp  message.cpp  message.h
src/protos/: CMakeLists.txt
